[package]
name = "mdrs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdrs"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log= "0.4"
env_logger = "0.9"